Add thumbnail ingest processor