@@ -8,7 +8,6 @@
 
 package org.elasticsearch.ingest.attachment;
 
-import java.util.Collections;
 import java.util.Map;
 
 import org.elasticsearch.ingest.Processor;
@@ -19,6 +18,9 @@ public class IngestAttachmentPlugin extends Plugin implements IngestPlugin {
 
     @Override
     public Map<String, Processor.Factory> getProcessors(Processor.Parameters parameters) {
-        return Collections.singletonMap(AttachmentProcessor.TYPE, new AttachmentProcessor.Factory());
+        return Map.of(
+            AttachmentProcessor.TYPE, new AttachmentProcessor.Factory(),
+            ThumbnailProcessor.TYPE, new ThumbnailProcessor.Factory()
+        );
     }
 }
